Bug 235085 - Korgac Segmentation Fault
Summary: Korgac Segmentation Fault
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: reminder daemon (korgac) [CLOSED: Use Reminder Daemon product] (other bugs)
Version First Reported In: 0.9
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 245706 250862 251993 257940 258188 260665 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-22 17:53 UTC by Arnaud Mombrial
Modified: 2010-12-20 23:48 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.4.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.27 KB, text/plain)
2010-05-20 19:48 UTC, David W Reeves
Details
New crash information added by DrKonqi (4.52 KB, text/plain)
2010-07-21 17:45 UTC, peterof
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Mombrial 2010-04-22 17:53:04 UTC
Application: korgac (0.9)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32.11-99.fc12.i686.PAE i686
Distribution (Platform): Fedora RPMs

-- Information about the crash:
Korganizer Segmentation Fault. It happens each time I start Kontact. 

I have tried a yum remove / install kdepim without any luck.

The crash can be reproduced every time.

 -- Backtrace:
Application: Démon d'alarme de KOrganizer (korgac), signal: Segmentation fault
[KCrash Handler]
#6  0x0049d566 in KCal::Alarm::hasStartOffset (this=0x0) at /usr/src/debug/kdepimlibs-4.4.2/kcal/alarm.cpp:589
#7  0x0805320a in AlarmDialog::addIncidence (this=0x8d40970, incidence=0x8cc4fb8, reminderAt=..., displayText=...) at /usr/src/debug/kdepim-4.4.2/korganizer/korgac/alarmdialog.cpp:280
#8  0x0805a1de in KOAlarmClient::createReminder (this=0x8b6f448, calendar=0x8bab9f0, incidence=0x8cc4fb8, dt=..., displayText=...)
    at /usr/src/debug/kdepim-4.4.2/korganizer/korgac/koalarmclient.cpp:149
#9  0x0805b9dd in KOAlarmClient::KOAlarmClient (this=0x8b6f448, parent=0x0) at /usr/src/debug/kdepim-4.4.2/korganizer/korgac/koalarmclient.cpp:84
#10 0x08051636 in ReminderDaemonApp::newInstance (this=0xbfeab4e0) at /usr/src/debug/kdepim-4.4.2/korganizer/korgac/korgacmain.cpp:47
#11 0x021c9591 in KUniqueApplicationAdaptor::newInstance (this=0x8b85ff8, asn_id=..., args=...) at /usr/src/debug/kdelibs-4.4.2/kdeui/kernel/kuniqueapplication.cpp:454
#12 0x021c9ca3 in KUniqueApplicationAdaptor::qt_metacall (this=0x8b85ff8, _c=InvokeMetaMethod, _id=0, _a=0xbfeaaa3c)
    at /usr/src/debug/kdelibs-4.4.2/i686-redhat-linux-gnu/kdeui/kuniqueapplication_p.moc:81
#13 0x06fd243c in QDBusConnectionPrivate::deliverCall (this=0x8a5b0c0, object=0x8b85ff8, msg=..., metaTypes=..., slotIdx=4) at qdbusintegrator.cpp:904
#14 0x06fd36fa in QDBusConnectionPrivate::activateCall (this=0x8a5b0c0, object=0x8b85ff8, flags=337, msg=...) at qdbusintegrator.cpp:809
#15 0x06fd4181 in QDBusConnectionPrivate::activateObject (this=0x8a5b0c0, node=..., msg=..., pathStartPos=16) at qdbusintegrator.cpp:1364
#16 0x06fd440b in QDBusActivateObjectEvent::placeMetaCall (this=0x8a60508) at qdbusintegrator.cpp:1477
#17 0x06d94c4e in QObject::event (this=0xbfeab4e0, e=0x8a60508) at kernel/qobject.cpp:1248
#18 0x06d846bc in QCoreApplication::event (this=0xbfeab4e0, e=0x8a60508) at kernel/qcoreapplication.cpp:1533
#19 0x073f3817 in QApplication::event (this=0xbfeab4e0, e=0x8a60508) at kernel/qapplication.cpp:2353
#20 0x073f0d2c in QApplicationPrivate::notify_helper (this=0x8a6a908, receiver=0xbfeab4e0, e=0x8a60508) at kernel/qapplication.cpp:4300
#21 0x073f7556 in QApplication::notify (this=0xbfeab4e0, receiver=0xbfeab4e0, e=0x8a60508) at kernel/qapplication.cpp:3704
#22 0x021c27cb in KApplication::notify (this=0xbfeab4e0, receiver=0xbfeab4e0, event=0x8a60508) at /usr/src/debug/kdelibs-4.4.2/kdeui/kernel/kapplication.cpp:302
#23 0x06d84c03 in QCoreApplication::notifyInternal (this=0xbfeab4e0, receiver=0xbfeab4e0, event=0x8a60508) at kernel/qcoreapplication.cpp:704
#24 0x06d85ac3 in sendEvent (receiver=0x0, event_type=0, data=0x8a44f78) at kernel/qcoreapplication.h:215
#25 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8a44f78) at kernel/qcoreapplication.cpp:1345
#26 0x06d85c1e in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#27 0x06dad350 in sendPostedEvents (s=0x8a6e510) at kernel/qcoreapplication.h:220
#28 postEventSourceDispatch (s=0x8a6e510) at kernel/qeventdispatcher_glib.cpp:276
#29 0x00714fb8 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#30 0x007188e8 in ?? () from /lib/libglib-2.0.so.0
#31 0x00718a14 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#32 0x06dace46 in QEventDispatcherGlib::processEvents (this=0x8a44c38, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#33 0x0749f0e6 in QGuiEventDispatcherGlib::processEvents (this=0x8a44c38, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#34 0x06d832da in QEventLoop::processEvents (this=0xbfeab444, flags=...) at kernel/qeventloop.cpp:149
#35 0x06d8361a in QEventLoop::exec (this=0xbfeab444, flags=...) at kernel/qeventloop.cpp:201
#36 0x06d85ce7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#37 0x073f0dd8 in QApplication::exec () at kernel/qapplication.cpp:3579
#38 0x080515a5 in main (argc=3, argv=0xbfeab634) at /usr/src/debug/kdepim-4.4.2/korganizer/korgac/korgacmain.cpp:85

This bug may be a duplicate of or related to bug 228200.

Possible duplicates by query: bug 228200.

Reported using DrKonqi
Comment 1 Sergio Martins 2010-05-06 01:49:51 UTC
Can you post your ~/.kde4/share/config/korgac file?

There should be an entry called [Incidence-1] or 2,3,4, look at it's UID, then open the *ics file and look for that event (through the UID) and paste the event here too.
Comment 2 Arnaud Mombrial 2010-05-06 11:25:21 UTC
Hi Sergio, thank u for your support.

I've found a korgacrc file with some relevant [Incidence-(1234)] information in it, under ~/.kde/share/config/ path. (Fedora Specific ?)

#############
[Alarms]
CalendarsLastChecked=2010,3,22,17,54,43

[General]
Enabled=true
Position=847,71
Reminders=4

[Incidence-1]
RemindAt=2010,3,22,16,56,16
UID=libkcal-447333808.272

[Incidence-2]
RemindAt=2010,3,22,14,46,4
UID=libkcal-1267884533.253

[Incidence-3]
RemindAt=2010,3,22,15,25,58
UID=libkcal-1157095160.443

[Incidence-4]
RemindAt=2010,3,22,16,46,4
UID=libkcal-588531153.353
#############

So I've search through all of my ics files (more than one agenda) 
VEVENT 1,2 & 4 are located in std.ics file
VEVENT 3 is located in another ics file


1° 
BEGIN:VEVENT
DTSTAMP:20100505T093338Z
ORGANIZER;CN="Arnaud Mombrial":MAILTO:arnaud.mombrial@fabernovel.com
ATTENDEE;CN="Arnaud Mombrial";RSVP=FALSE;PARTSTAT=ACCEPTED;
 ROLE=REQ-PARTICIPANT:mailto:arnaud.mombrial@fabernovel.com
CREATED:20100304T140113Z
UID:libkcal-447333808.272
SEQUENCE:4
LAST-MODIFIED:20100330T135857Z
DESCRIPTION:01.64.79.80.00 : Connaître décision examen dossier.
SUMMARY:Contacter Service Aide Juridictionnelle
DTSTART;TZID=Europe/Paris:20100405T110000
DTEND;TZID=Europe/Paris:20100405T130000
TRANSP:OPAQUE
BEGIN:VALARM
DESCRIPTION:
ACTION:DISPLAY
TRIGGER;VALUE=DURATION:-PT30M
END:VALARM
END:VEVENT

2°
BEGIN:VEVENT
DTSTAMP:20100505T093338Z
ORGANIZER;CN="Arnaud Mombrial":MAILTO:arnaud.mombrial@fabernovel.com
ATTENDEE;CN="Arnaud Mombrial";RSVP=FALSE;PARTSTAT=ACCEPTED;
 ROLE=REQ-PARTICIPANT:mailto:arnaud.mombrial@fabernovel.com
CREATED:20100317T172103Z
UID:libkcal-1267884533.253
SEQUENCE:9
LAST-MODIFIED:20100322T122547Z
SUMMARY:Reprise Inspiron par transporteur
LOCATION:17 RFT
DTSTART;TZID=Europe/Paris:20100322T101500
DTEND;TZID=Europe/Paris:20100322T120000
TRANSP:OPAQUE
END:VEVENT


BEGIN:VEVENT
DTSTAMP:20100426T074242Z
ORGANIZER;CN="Arnaud Mombrial":MAILTO:arnaud.mombrial@fabernovel.com
ATTENDEE;CN="Arnaud Mombrial";RSVP=FALSE;PARTSTAT=ACCEPTED;
 ROLE=REQ-PARTICIPANT:mailto:arnaud.mombrial@fabernovel.com
CREATED:20100226T180413Z
UID:libkcal-1157095160.443
SEQUENCE:3
LAST-MODIFIED:20100326T133430Z
SUMMARY:Récupération Garantie Décénnale Verrière
LOCATION:Fax ou Courrier : Mme Habel :: MAAF
DTSTART;TZID=Europe/Paris:20100329T100000
DTEND;TZID=Europe/Paris:20100329T120000
TRANSP:OPAQUE
BEGIN:VALARM
DESCRIPTION:
ACTION:DISPLAY
TRIGGER;VALUE=DURATION:-PT15M
END:VALARM
END:VEVENT

4° 
BEGIN:VEVENT
DTSTAMP:20100505T093338Z
ORGANIZER;CN="Arnaud Mombrial":MAILTO:arnaud.mombrial@fabernovel.com
ATTENDEE;CN="Arnaud Mombrial";RSVP=FALSE;PARTSTAT=ACCEPTED;
 ROLE=REQ-PARTICIPANT:mailto:arnaud.mombrial@fabernovel.com
CREATED:20100318T161905Z
UID:libkcal-588531153.353
LAST-MODIFIED:20100318T161905Z
SUMMARY:Inauguration Réseau 2000
LOCATION:1 rue de la solidarité
DTSTART;TZID=Europe/Paris:20100326T113000
DTEND;TZID=Europe/Paris:20100326T133000
TRANSP:OPAQUE
BEGIN:VALARM
DESCRIPTION:
ACTION:DISPLAY
TRIGGER;VALUE=DURATION:-P4D
END:VALARM
END:VEVENT

Hope this helps.

Best Regards.
Comment 3 Sergio Martins 2010-05-06 12:02:34 UTC
SVN commit 1123581 by smartins:

Don't create reminder when there are no alarms.
Between writting the incidence's uid to config and then reeding it again, someone could have removed the alarm.

Fixes segfault.

BUG: 235085


 M  +4 -1      koalarmclient.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123581
Comment 4 Sergio Martins 2010-05-06 12:07:13 UTC
SVN commit 1123583 by smartins:

Backport r1123581 from trunk to branch 4.4:

Don't create reminder when there are no alarms.
Between writting the incidence's uid to config and then reeding it again, someone could have removed the alarm.

Fixes segfault.

CCBUG: 235085


 M  +4 -1      koalarmclient.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123583
Comment 5 Arnaud Mombrial 2010-05-06 12:25:16 UTC
Sergio, 

Is there a way for me to recover a working korganizer, by removing for example some lines in std.ics or somewhere  else ?

Regards.
Comment 6 Sergio Martins 2010-05-06 13:26:38 UTC
Removing this:

[Incidence-2]
RemindAt=2010,3,22,14,46,4
UID=libkcal-1267884533.253

from the korgac file might be enough. If it doesn't work try deleting korgac.
Comment 7 Arnaud Mombrial 2010-05-06 14:55:40 UTC
Ok, deleting the correct incidence fix the problem.

Works for me.

Thank you so much for time spent on it.

Regards.
Comment 8 David W Reeves 2010-05-20 19:48:18 UTC
Created attachment 43753 [details]
New crash information added by DrKonqi

I was just re-booting my computer when the reminder daemon failed
Comment 9 peterof 2010-07-21 17:45:45 UTC
Created attachment 49365 [details]
New crash information added by DrKonqi

occur when system start (anf kconctat) start
Comment 10 Jonathan Thomas 2010-07-25 15:40:33 UTC
*** Bug 245706 has been marked as a duplicate of this bug. ***
Comment 11 Christophe Marin 2010-09-19 11:52:46 UTC
*** Bug 250862 has been marked as a duplicate of this bug. ***
Comment 12 Christophe Marin 2010-10-14 01:20:21 UTC
*** Bug 251993 has been marked as a duplicate of this bug. ***
Comment 13 Dario Andres 2010-12-12 15:03:39 UTC
*** Bug 258188 has been marked as a duplicate of this bug. ***
Comment 14 Dario Andres 2010-12-12 15:03:41 UTC
*** Bug 257940 has been marked as a duplicate of this bug. ***
Comment 15 Nicolas L. 2010-12-19 10:28:38 UTC
*** Bug 260665 has been marked as a duplicate of this bug. ***
Comment 16 David Prudhon 2010-12-20 23:48:27 UTC
Le 19/12/2010 10:28, Nicolas L. a écrit :
> https://bugs.kde.org/show_bug.cgi?id=235085
>
>
>
>
>
> --- Comment #15 from Nicolas L.<neoclust kde free fr>   2010-12-19 10:28:38 ---
> *** Bug 260665 has been marked as a duplicate of this bug. ***
>
Thanks ;)