Don't create reminder when there are no alarms. Between writting the incidence's uid to config and then reeding it again, someone could have removed the alarm.

Fixes segfault.

BUG: 235085

svn path=/trunk/KDE/kdepim/; revision=1123581